# orpc-prototype

./: Cargo.toml  README.md
orpc/: Cargo.toml
orpc/src/: lib.rs
orpc/src/oqueue/: generic_test.rs  locking.rs  mod.rs  registry.rs
orpc/src/orpc_impl/: errors.rs  framework.rs  integration_test.rs  mod.rs
orpc/src/sync/: blocker.rs  mod.rs  task.rs
orpc_macros/: Cargo.toml
orpc_macros/src/: lib.rs  orpc_impl.rs  orpc_server.rs  orpc_trait.rs  parsing_utils.rs  select.rs
prefetcher_demo/: Cargo.toml
prefetcher_demo/src/: block_device.rs  cache.rs  disk.rs  eviction_policy.rs  main.rs  prefetch_policy.rs  shutdown.rs
