[package]
name = "orpc"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []


[dependencies]
orpc_macros = { path = "../orpc_macros" }
snafu = { version = "0.8", default-features = false, features = ["alloc", "rust_1_81"] }
traitcast = "*"
traitcast_core = "*"
inventory = "*"
anymap = "*"
static_assertions = "*"
paste = "*"
fixedvec = "0.2.4"
assert_matches = "1.5.0"

[lints]
workspace = true
